<resources>
    <string name="app_name">PCA App</string>

    <string name="btn_screenshot">Als Bild speichern</string>

    <string name="dosage_result_mg_ml">mg/ml</string>

    <string name="label_min_runtime">Minimale Laufzeit in Tagen</string>
    <string name="label_basal_rate">Basalrate in mg/h</string>
    <string name="label_boli_per_hour">Boli pro h</string>
    <string name="label_basal_rate_pump">Kontinuierliche Rate pro h</string>
    <string name="label_bolus_amount">Bolus</string>
    <string name="label_bolus_lock">Bolussperrzeit in m</string>
    <string name="label_cartridge">Kassettenvolumen in ml</string>
    <string name="label_dosage">Wirkstoffkonzentration</string>
    <string name="label_duration">Laufzeit in Tagen</string>
    <string name="label_ingredient_quantity">Wirkstoffmenge in mg / Beladung</string>
    <string name="label_ingredient_quantity_per_day">Wirkstoffmenge pro Tag in mg</string>
    <string name="label_number_hint">0</string>
    <string name="label_pump_activity">Pumpeneinstellungen</string>

    <string name="result_not_given">Keine Angabe</string>
    <string name="result_basal_rate">Basalrate:</string>
    <string name="result_boli_per_hour">Boli pro Stunde:</string>
    <string name="result_bolus_amount">Bolus:</string>
    <string name="result_bolus_lock">Bolussperrzeit:</string>
    <string name="result_cartridge">Kassettenvolumen:</string>
    <string name="result_dosage">Wirkstoffkonzentration:</string>
    <string name="result_duration">Laufzeit:</string>
    <string name="result_ingredient_quantity">Wirkstoffmenge:</string>

    <string name="title_pharmacy">Apothekerinformation</string>
    <string name="title_pump">Pumpeneinstellungen</string>
    <string name="title_result">Schmerzmittelversorgung</string>

    <string name="disclaimer">
        Diese Anwendung dient nur zu Schulungszwecken und ist kein Zubehör für Medizinprodukte.\n\n
        Die Korrektheit der berechneten Werte ist nicht gewährleistet.
    </string>

    <string name="version">v1.0</string>

    <string name="screenshot_was_saved">Das Bild wurde gespeichert.</string>

    <string-array name="array_volume_cartridge">
        <item>50</item>
        <item>100</item>
        <item>250</item>
    </string-array>
    <string-array name="array_unit_volume">
        <item>ml</item>
        <item>mg</item>
    </string-array>
    <string-array name="array_unit_time">
        <item>Minuten</item>
        <item>Stunden</item>
    </string-array>
</resources>
