<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_result"
            android:textSize="@dimen/font_size_l" />

        <TextView
            android:id="@+id/resultDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_l" />

        //Pharmacy results
        <TextView
            android:id="@+id/pharmacyResultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_md"
            android:text="@string/title_pharmacy"
            android:textSize="@dimen/font_size_md" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_md">

            <TextView
                android:id="@+id/basalRateResultLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_md"
                android:text="@string/result_basal_rate" />

            <TextView
                android:id="@+id/basalRateResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_not_given" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_md">

            <TextView
                android:id="@+id/cartridgeResultLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_md"
                android:text="@string/result_cartridge" />

            <TextView
                android:id="@+id/cartridgeResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_not_given" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_md">

            <TextView
                android:id="@+id/durationResultLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_md"
                android:text="@string/result_duration" />

            <TextView
                android:id="@+id/durationResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_not_given" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_l">

            <TextView
                android:id="@+id/ingredientQuantityResultLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_md"
                android:text="@string/result_ingredient_quantity" />

            <TextView
                android:id="@+id/ingredientQuantityResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_not_given" />

        </LinearLayout>

        //Pump results
        <TextView
            android:id="@+id/pumpResultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_md"
            android:text="@string/title_pump"
            android:textSize="@dimen/font_size_md" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_md">

            <TextView
                android:id="@+id/bolusAmountResultLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_md"
                android:text="@string/result_bolus_amount" />

            <TextView
                android:id="@+id/bolusAmountResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_not_given" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_md">

            <TextView
                android:id="@+id/bolusLockResultLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_bolus_lock"
                android:layout_marginRight="@dimen/margin_md" />

            <TextView
                android:id="@+id/bolusLockResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_not_given" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_md">

            <TextView
                android:id="@+id/boliPerHourResultLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_boli_per_hour"
                android:layout_marginRight="@dimen/margin_md" />

            <TextView
                android:id="@+id/boliPerHourResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_not_given" />
        </LinearLayout>

        <Button
            android:text="@string/btn_screenshot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/screenshotBtn" />
    </LinearLayout>

    <!--Footer for dosage information-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/padding_md">

        <TextView
            android:id="@+id/dosageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dosage"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/dosageResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_md"
            android:text="0"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/dosageResultUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_sm"
            android:text="@string/dosage_result_mg_ml"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>
